<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     tools:context=".Home">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
             android:gravity="top|center"
             android:orientation="vertical">

            <TextView
                android:id="@+id/inventoryManagement"
                android:layout_width="wrap_content"
                style="@style/HeaderTextViewStyle"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                android:text="@string/asset_management"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:id="@+id/homeBtnView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                 android:gravity="top|center"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/newAssetButton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/createNewAssetButton"
                    android:textAlignment="center"/>

                <Button
                    android:id="@+id/assignAssetButton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/assignAssetButton"
                    android:textAlignment="center"/>

                <Button
                    android:id="@+id/updateAssetButton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/updateAssetButton"
                    android:textAlignment="center"/>

                <Button
                    android:id="@+id/readAssetButton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/readAssetButton"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/scrapAssetButton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/scrapAssetButton"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/queryInventoryButton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/queryInventoryButton"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/signedUserBtn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/signed_up_users"
                    android:textAlignment="center" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>