<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
     android:layout_height="match_parent"
    tools:context=".QueryInventory">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical">


        <TextView
            android:id="@+id/inventoryManagementText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asset_management"
            android:textAlignment="center"
            style="@style/HeaderTextViewStyle"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                 android:orientation="horizontal">

                <TextView
                    android:id="@+id/userAssigned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userAssigned"
                    android:textSize="14sp" />

                    <Spinner
                        android:id="@+id/userAssignedList"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/spinner_boarder"
                         android:overlapAnchor="false"
                        android:spinnerMode="dialog"/>
             </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                 android:gravity="center"
                 android:orientation="vertical">

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                      android:text="@string/submit" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginTop="20dp"
                    android:paddingBottom="20dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <HorizontalScrollView
                        android:id="@+id/horizontalscrollView"
                        android:layout_width="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:layout_height="wrap_content">
                        <ScrollView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        <TableLayout
                            android:id="@+id/tableView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/tablestyle">

                            <TableRow
                                android:id="@+id/row0"
                                 android:layout_width="fill_parent"
                                android:paddingTop="5dp"
                                android:paddingBottom="5dp"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:id="@+id/rowNumber"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/slNoTable"
                                    android:paddingRight="5dp"
                                    android:paddingLeft="5dp"
                                    android:layout_marginLeft="5dp"
                                    android:layout_marginRight="5dp"
                                    android:background="@drawable/tablestyle"
                                    android:backgroundTint="#002147"
                                    android:textColor="#ffff"/>


                                <TextView
                                    android:id="@+id/row0Header"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/barcodeValueTable"
                                    android:paddingRight="5dp"
                                    android:paddingLeft="5dp"
                                    android:layout_marginRight="5dp"
                                    android:backgroundTint="#002147"
                                    android:background="@drawable/tablestyle"
                                    android:textColor="#ffff"/>


                                <TextView
                                    android:id="@+id/row1Header"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/barcodeImageTable"
                                    android:paddingRight="5dp"
                                    android:paddingLeft="5dp"
                                    android:layout_marginRight="5dp"
                                    android:backgroundTint="#002147"
                                    android:background="@drawable/tablestyle"
                                    android:textColor="#ffff"/>

                                <TextView
                                    android:id="@+id/row2Header"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/assignToTable"
                                    android:paddingRight="5dp"
                                    android:paddingLeft="5dp"
                                    android:backgroundTint="#002147"
                                    android:layout_marginRight="5dp"
                                    android:background="@drawable/tablestyle"
                                    android:textColor="#ffff"/>

                                <TextView
                                    android:id="@+id/row3Header"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/assetTypeTable"
                                    android:paddingRight="5dp"
                                    android:paddingLeft="5dp"
                                    android:backgroundTint="#002147"
                                    android:layout_marginRight="5dp"
                                    android:background="@drawable/tablestyle"
                                    android:textColor="#ffff"/>


                                <TextView
                                    android:id="@+id/row4Header"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingRight="5dp"
                                    android:paddingLeft="5dp"
                                    android:layout_marginRight="5dp"
                                    android:backgroundTint="#002147"
                                    android:text="@string/equipTypeTable"
                                    android:background="@drawable/tablestyle"
                                    android:textColor="#ffff"/>


                                <TextView
                                    android:id="@+id/row5Header"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingRight="5dp"
                                    android:paddingLeft="5dp"
                                    android:text="@string/statusTable"
                                    android:backgroundTint="#002147"
                                    android:layout_marginRight="5dp"
                                    android:background="@drawable/tablestyle"
                                    android:textColor="#ffff"/>


                                <TextView
                                    android:id="@+id/row6Header"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingRight="5dp"
                                    android:paddingLeft="5dp"
                                    android:text="@string/locationTable"
                                    android:backgroundTint="#002147"
                                    android:layout_marginRight="5dp"
                                    android:background="@drawable/tablestyle"
                                    android:textColor="#ffff"/>
                            </TableRow>
                        </TableLayout>
                        </ScrollView>
                    </HorizontalScrollView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>



