<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     tools:context=".NewBarcode2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="40dp"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/downloadAndAssign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            style="@style/HeaderTextViewStyle"
            android:text="@string/downloadAndAssign" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp"
                android:gravity="top|center"
                android:paddingBottom="20dp"
                android:orientation="vertical">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:id="@+id/barcodeImage"></ImageView>

            <TextView
                android:id="@+id/barcodeView"
                android:layout_marginTop="-30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/pink"
                android:gravity="center"
                android:textIsSelectable="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/downloadButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/downloadBarcode"
                android:textSize="14sp" />

            <Button
                android:id="@+id/assignAssetButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/assignAssetButton"
                android:textSize="14sp" />

        </LinearLayout></LinearLayout></ScrollView></LinearLayout></LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
